--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5,11 +5,11 @@
  * Style variables
  */
 $base-font-family:     'Source Code Pro', monospace !default;
-$base-font-size:       12.5px !default;
+$base-font-size:       22.5px !default;
 $mobile-font-size:     12px !default;
 $base-line-height:     1.5 !default;
 $container-width:      90% !default;
-$container-max-width:  600px !default;
+$container-max-width:  900px !default;
 
 /**
  * Global
@@ -22,6 +22,10 @@ a { text-decoration: underline;  color: var(--link-color); }
 h6 { margin-top: 0px; margin-bottom: 0px; text-decoration: none; color: var(--link-color); font-size: 10px}
 a:hover { color: var(--background-color); background-color: var(--base-color); }
 @media only screen and (max-device-width: 500px) { * { font-size: $mobile-font-size !important; } }
+
+.post__date {margin-bottom: 0px; color: var(-text-color); display: inline; font-style: italic;}
+.post__meta {margin-bottom: 30px; color: var(-text-color);}
+.post__title {font-size: 40px; text-decoration: underline}
 
 /**
  * Layout
