--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,10 @@
     </main>
 
     {%- include footer.html -%}
-    {%- include archive.html -%}
+
+    {% if page.layout == 'home' %}
+        {%- include archive.html -%}
+    {% endif %}
 
     </div>
   </body>
